--- a/src/html/payment-option-govx.html
+++ b/src/html/payment-option-govx.html
@@ -3,7 +3,13 @@
   <div class="braintree-option__disabled-message"></div>
 </div>
 
-<div class="govx-cc-icon-container">
+<div class="braintree-option__logo">
+  <svg width="48" height="29" class="@CLASSNAME">
+    <use xlink:href="#@ICON"></use>
+  </svg>
+</div>
+
+<div class="@GOVX_CC_WRAPPER">
   <div data-braintree-id="american-express-card-icon" class="govx-cc-icon">
     <svg width="40" height="24">
         <use xlink:href="#icon-american-express"></use>
